FEAT(task): implemented tasks to contacts and to its own route
